@@ -1,113 +1,0 @@
-FuncList w3mFuncList[] = {
-/*0*/ {"@@@",nulcmd},
-/*1*/ {"ABORT",quitfm},
-/*2*/ {"ADD_BOOKMARK",adBmark},
-/*3*/ {"BACK",backBf},
-/*4*/ {"BEGIN",goLineF},
-/*5*/ {"BOOKMARK",ldBmark},
-/*6*/ {"CENTER_H",ctrCsrH},
-/*7*/ {"CENTER_V",ctrCsrV},
-/*8*/ {"COOKIE",cooLst},
-/*9*/ {"DELETE_PREVBUF",deletePrevBuf},
-/*10*/ {"DICT_WORD",dictword},
-/*11*/ {"DICT_WORD_AT",dictwordat},
-/*12*/ {"DOWN",ldown1},
-/*13*/ {"DOWNLOAD",svSrc},
-/*14*/ {"EDIT",editBf},
-/*15*/ {"EDIT_SCREEN",editScr},
-/*16*/ {"END",goLineL},
-/*17*/ {"ESCBMAP",escbmap},
-/*18*/ {"ESCMAP",escmap},
-/*19*/ {"EXEC_SHELL",execsh},
-/*20*/ {"EXIT",quitfm},
-/*21*/ {"EXTERN",extbrz},
-/*22*/ {"EXTERN_LINK",linkbrz},
-/*23*/ {"FRAME",rFrame},
-/*24*/ {"GOTO",goURL},
-/*25*/ {"GOTO_LINE",goLine},
-/*26*/ {"GOTO_LINK",followA},
-/*27*/ {"HELP",ldhelp},
-/*28*/ {"HISTORY",ldHist},
-/*29*/ {"INFO",pginfo},
-/*30*/ {"INIT_MAILCAP",initMailcap},
-/*31*/ {"INTERRUPT",susp},
-/*32*/ {"LEFT",col1L},
-/*33*/ {"LINE_BEGIN",linbeg},
-/*34*/ {"LINE_END",linend},
-/*35*/ {"LINE_INFO",curlno},
-/*36*/ {"LINK_BEGIN",topA},
-/*37*/ {"LINK_END",lastA},
-/*38*/ {"LOAD",ldfile},
-/*39*/ {"MAIN_MENU",mainMn},
-/*40*/ {"MARK",_mark},
-/*41*/ {"MARK_MID",chkNMID},
-/*42*/ {"MARK_URL",chkURL},
-/*43*/ {"MENU",mainMn},
-/*44*/ {"MOUSE",mouse},
-/*45*/ {"MOUSE_TOGGLE",msToggle},
-/*46*/ {"MOVE_DOWN",movD},
-/*47*/ {"MOVE_DOWN1",movD1},
-/*48*/ {"MOVE_LEFT",movL},
-/*49*/ {"MOVE_LEFT1",movL1},
-/*50*/ {"MOVE_RIGHT",movR},
-/*51*/ {"MOVE_RIGHT1",movR1},
-/*52*/ {"MOVE_UP",movU},
-/*53*/ {"MOVE_UP1",movU1},
-/*54*/ {"MSGS",msgs},
-/*55*/ {"NEXT_DOWN",nextD},
-/*56*/ {"NEXT_LEFT",nextL},
-/*57*/ {"NEXT_LEFT_UP",nextLU},
-/*58*/ {"NEXT_LINK",nextA},
-/*59*/ {"NEXT_MARK",nextMk},
-/*60*/ {"NEXT_PAGE",pgFore},
-/*61*/ {"NEXT_RIGHT",nextR},
-/*62*/ {"NEXT_RIGHT_DOWN",nextRD},
-/*63*/ {"NEXT_UP",nextU},
-/*64*/ {"NEXT_WORD",movRW},
-/*65*/ {"NOTHING",nulcmd},
-/*66*/ {"NULL",nulcmd},
-/*67*/ {"OPTIONS",ldOpt},
-/*68*/ {"PCMAP",pcmap},
-/*69*/ {"PEEK",curURL},
-/*70*/ {"PEEK_IMG",peekIMG},
-/*71*/ {"PEEK_LINK",peekURL},
-/*72*/ {"PIPE_BUF",pipeBuf},
-/*73*/ {"PIPE_SHELL",pipesh},
-/*74*/ {"PREV_LINK",prevA},
-/*75*/ {"PREV_MARK",prevMk},
-/*76*/ {"PREV_PAGE",pgBack},
-/*77*/ {"PREV_WORD",movLW},
-/*78*/ {"PRINT",svBuf},
-/*79*/ {"QUIT",qquitfm},
-/*80*/ {"READ_SHELL",readsh},
-/*81*/ {"REDRAW",rdrwSc},
-/*82*/ {"REG_MARK",reMark},
-/*83*/ {"RELOAD",reload},
-/*84*/ {"RIGHT",col1R},
-/*85*/ {"SAVE",svSrc},
-/*86*/ {"SAVE_IMAGE",svI},
-/*87*/ {"SAVE_LINK",svA},
-/*88*/ {"SAVE_SCREEN",svBuf},
-/*89*/ {"SEARCH",srchfor},
-/*90*/ {"SEARCH_BACK",srchbak},
-/*91*/ {"SEARCH_FORE",srchfor},
-/*92*/ {"SEARCH_NEXT",srchnxt},
-/*93*/ {"SEARCH_PREV",srchprv},
-/*94*/ {"SELECT",selBuf},
-/*95*/ {"SETENV",setEnv},
-/*96*/ {"SET_OPTION",setOpt},
-/*97*/ {"SHELL",execsh},
-/*98*/ {"SHIFT_LEFT",shiftl},
-/*99*/ {"SHIFT_RIGHT",shiftr},
-/*100*/ {"SOURCE",vwSrc},
-/*101*/ {"SUBMIT",submitForm},
-/*102*/ {"SUSPEND",susp},
-/*103*/ {"UP",lup1},
-/*104*/ {"VERSION",dispVer},
-/*105*/ {"VIEW",vwSrc},
-/*106*/ {"VIEW_BOOKMARK",ldBmark},
-/*107*/ {"VIEW_IMAGE",followI},
-/*108*/ {"WHEREIS",srchfor},
-/*109*/ {"WRAP_TOGGLE",wrapToggle},
-{ NULL, NULL }
-};
